--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="ttt.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -41,6 +41,6 @@
         </div>
     </main>
 
-    <script src="ttt.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
